# ai-robotics-textbook

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  INTEGRATION_DOCUMENTATION.md  README.md  SECURITY.md  SETUP.md  add_test_content.py  docusaurus.config.js  index_book_content.py  index_textbook.py  mock-backend.js  package-lock.json  package.json  sidebars.js  tailwind.config.js  test_doc.txt  vercel.json
.github/: FUNDING.yml
RAG-backend/: .env.example  .gitignore  BACKEND_SETUP_GUIDE.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MCP-CONFIG.md  README.md  SETUP_GUIDE.md  agent.py  alembic.ini  app.py  check_cohere_models.py  dat-ingestion.py  debug_env.py  debug_search.py  docker-compose.yml  embedding_generator.py  fix_collection.py  index_all_books.py  index_books.py  index_content.py  ingest_docs.py  main.py  neon_setup.py  pyproject.toml  qdrant_setup.py  quick_test.py  rag_accuracy_test.py  railway.json  render.yaml  requirements.txt  server.py  start_server.py  test_api.py  test_backend.py  test_embedding.py  test_qdrant.py  test_retrieval.py  test_retrieval_basic.py  (+3 more)
RAG-backend/.claude/: mcp-config.json  settings.local.json
RAG-backend/alembic/: env.py
RAG-backend/frontend-integration/: INTEGRATION_GUIDE.md  env.example
RAG-backend/frontend-integration/api/: rag-api.js
RAG-backend/frontend-integration/components/: DocumentUpload.jsx  RAGChat.jsx
RAG-backend/frontend-integration/pages/: chat.js
RAG-backend/frontend-integration/styles/: rag-chat.css
RAG-backend/src/: main.py
RAG-backend/tests/: conftest.py  test_config.py
(+182 files in other folders)
